--- a/frontend/src/styles/ProductPage.scss
+++ b/frontend/src/styles/ProductPage.scss
@@ -18,6 +18,12 @@
   .product-info {
     width: 30%;
     margin: 0em 2rem 0em 2rem;
+
+    .selected-image-button {
+      background: white;
+      border: none;
+      padding: 0em;
+    }
   }
 
   .product-checkout {
